fix stylesheet location

--- a/coptic/lambdin/index.html
+++ b/coptic/lambdin/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="./styles/lessons.css">
+		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
 		<h1 class="c">ⲧⲙⲛ̄ⲧⲣⲙ̄ⲛ̄ⲕⲏⲙⲉ</h1>
