fix revelation links

--- a/coptic/bible/revelation.html
+++ b/coptic/bible/revelation.html
@@ -2,9 +2,10 @@
 	<head>
 		<title>Revelation in Saidic Coptic</title>
 		<link rel="stylesheet" href="./styles/revelation.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<script src="./scripts/revelation.js"></script>
+		<script src="/scripts/revelation.js"></script>
 		<div id="chapters">
 			<a href="#Chapter1">1</a>
 			<a href="#Chapter2">2</a>
