--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -3,37 +3,37 @@
 		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
-	Chapter 8
-The Verbal Sentence Model:
-Simple Past
+	<p>Chapter 8</p>
+<p>The Verbal Sentence Model:</p>
+<p>Simple Past</p>
 
-INTRODUCTION TO THE VERBS IN COPTIC
-<b>مقدمة للأفعال فى اللغة القبطية‎</b>
+<p>INTRODUCTION TO THE VERBS IN COPTIC</p>
+<p><b>مقدمة للأفعال فى اللغة القبطية‎</b></p>
 
-It is said that no sentence is complete in any language without the presence of "A VERB"; this is so obvious after our experience with some of the "Nominal Sentences." Getting to know the verbs will give you a better understanding of constructing sentences in Coptic. The Liturgy is full of verbs; i.e., he saved us, he protected us, he forgives us …etc. And it is important to start understanding these.
-However, before we get started, let us develop an Index of the verbs we are going to study. To understand this index will give you more confidence in the whole process.
+<p>It is said that no sentence is complete in any language without the presence of "A VERB"; this is so obvious after our experience with some of the "Nominal Sentences." Getting to know the verbs will give you a better understanding of constructing sentences in Coptic. The Liturgy is full of verbs; i.e., he saved us, he protected us, he forgives us …etc. And it is important to start understanding these.</p>
+<p>However, before we get started, let us develop an Index of the verbs we are going to study. To understand this index will give you more confidence in the whole process.</p>
 
-<b>قيل معرفة أن أى لغة لا تتم إلا بمعرفة أفعالها‎ ٠وهذه الجملة حقيقية إلى درجة أن إلمامك بالأفعال سيمكنك من‎ تكوين فهم بل جمل بالقبطية‎ ٠</b>
-<b>والنصوص كنيستنا الليتورجية فى مملوءة بالأفعال ؛ إرحمنا «تراءف علينا «غفر لنا ...إلخ.‎ </b>
-<b>وقبل اليدء فى الكتابة عن هذه الأفعال «إقرأ هذا الفصل التقديمى لتبويبها «وذلك لتسهيل فهم ما ستقرأه فى‎ الفصول القادمة‎ </b>
+<p><b>قيل معرفة أن أى لغة لا تتم إلا بمعرفة أفعالها‎ ٠وهذه الجملة حقيقية إلى درجة أن إلمامك بالأفعال سيمكنك من‎ تكوين فهم بل جمل بالقبطية‎ ٠</b></p>
+<p><b>والنصوص كنيستنا الليتورجية فى مملوءة بالأفعال ؛ إرحمنا «تراءف علينا «غفر لنا ...إلخ.‎ </b></p>
+<p><b>وقبل اليدء فى الكتابة عن هذه الأفعال «إقرأ هذا الفصل التقديمى لتبويبها «وذلك لتسهيل فهم ما ستقرأه فى‎ الفصول القادمة‎ </b></p>
 
-The Coptic Verb will be described under three different headings, each with a specific message or meaning.
+<p>The Coptic Verb will be described under three different headings, each with a specific message or meaning.</p>
 
-<b>الفعل القبطى سيتم شرحه تحت ثلاث تبويبات «كل سيتتاول باب )قصدا (أو غرضا معيتا ‏٠</b>
+<p><b>الفعل القبطى سيتم شرحه تحت ثلاث تبويبات «كل سيتتاول باب )قصدا (أو غرضا معيتا ‏٠</b></p>
 
-(1) THE VERB'S TENSE: <b>‎الفعل ز</b>
+<p>(1) THE VERB'S TENSE: <b>‎الفعل ز</b></p>
 
-Tense specifies the time when a verb occurs (verbs always indicate action).
-<b>الفعل هذا فيه حدث الذى بالزمن التصريف هذا ي</b>
+<p>Tense specifies the time when a verb occurs (verbs always indicate action).</p>
+<p><b>الفعل هذا فيه حدث الذى بالزمن التصريف هذا ي</b></p>
 
-Past: <b></b>
-Present: <b></b>
-Future: <b></b>
+<p>Past: <b></b></p>
+<p>Present: <b></b></p>
+<p>Future: <b></b></p>
 
-(2) THE VERB'S MOOD: <b>jaitl dine </b>
+<p>(2) THE VERB'S MOOD: <b>jaitl dine </b></p>
 
-Mood specifies a particular set of inflectional forms of a verb in order to express whether the action or state it denotes is conceived as fact (Narrative or otherwise) or some other manner; e.g., command, possibility, or wish …etc.
-<b>يتعلق هذا التصريف بالصيغة التى يأتى فيها القعل «إما الصيغة الإخبارية أو أحد الصيغ الأخرى مثل الأمر ...إلخ «كما سيتم توضيحها الآن ‏٠</b>
+<p>Mood specifies a particular set of inflectional forms of a verb in order to express whether the action or state it denotes is conceived as fact (Narrative or otherwise) or some other manner; e.g., command, possibility, or wish …etc.</p>
+<p><b>يتعلق هذا التصريف بالصيغة التى يأتى فيها القعل «إما الصيغة الإخبارية أو أحد الصيغ الأخرى مثل الأمر ...إلخ «كما سيتم توضيحها الآن ‏٠</b></p>
 
 (1) The Infintive: <b></b>
 This is the source word of the verb from which all the Inflections are derived.
