--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -4,45 +4,33 @@
 	</head>
 	<body>
 	<p>Chapter 8</p>
-<p>The Verbal Sentence Model:</p>
-<p>Simple Past</p>
+	<p>The Verbal Sentence Model:</p>
+	<p>Simple Past</p>
+	<p>INTRODUCTION TO THE VERBS IN COPTIC</p>
+	<p><b>مقدمة للأفعال فى اللغة القبطية‎</b></p>
+	<p>It is said that no sentence is complete in any language without the presence of "A VERB"; this is so obvious after our experience with some of the "Nominal Sentences." Getting to know the verbs will give you a better understanding of constructing sentences in Coptic. The Liturgy is full of verbs; i.e., he saved us, he protected us, he forgives us …etc. And it is important to start understanding these.</p>
+	<p>However, before we get started, let us develop an Index of the verbs we are going to study. To understand this index will give you more confidence in the whole process.</p>
 
-<p>INTRODUCTION TO THE VERBS IN COPTIC</p>
-<p><b>مقدمة للأفعال فى اللغة القبطية‎</b></p>
-
-<p>It is said that no sentence is complete in any language without the presence of "A VERB"; this is so obvious after our experience with some of the "Nominal Sentences." Getting to know the verbs will give you a better understanding of constructing sentences in Coptic. The Liturgy is full of verbs; i.e., he saved us, he protected us, he forgives us …etc. And it is important to start understanding these.</p>
-<p>However, before we get started, let us develop an Index of the verbs we are going to study. To understand this index will give you more confidence in the whole process.</p>
-
-<p><b>قيل معرفة أن أى لغة لا تتم إلا بمعرفة أفعالها‎ ٠وهذه الجملة حقيقية إلى درجة أن إلمامك بالأفعال سيمكنك من‎ تكوين فهم بل جمل بالقبطية‎ ٠</b></p>
-<p><b>والنصوص كنيستنا الليتورجية فى مملوءة بالأفعال ؛ إرحمنا «تراءف علينا «غفر لنا ...إلخ.‎ </b></p>
-<p><b>وقبل اليدء فى الكتابة عن هذه الأفعال «إقرأ هذا الفصل التقديمى لتبويبها «وذلك لتسهيل فهم ما ستقرأه فى‎ الفصول القادمة‎ </b></p>
-
-<p>The Coptic Verb will be described under three different headings, each with a specific message or meaning.</p>
-
-<p><b>الفعل القبطى سيتم شرحه تحت ثلاث تبويبات «كل سيتتاول باب )قصدا (أو غرضا معيتا ‏٠</b></p>
-
-<p>(1) THE VERB'S TENSE: <b>‎الفعل ز</b></p>
-
-<p>Tense specifies the time when a verb occurs (verbs always indicate action).</p>
-<p><b>الفعل هذا فيه حدث الذى بالزمن التصريف هذا ي</b></p>
-
-<p>Past: <b></b></p>
-<p>Present: <b></b></p>
-<p>Future: <b></b></p>
-
-<p>(2) THE VERB'S MOOD: <b>jaitl dine </b></p>
-
-<p>Mood specifies a particular set of inflectional forms of a verb in order to express whether the action or state it denotes is conceived as fact (Narrative or otherwise) or some other manner; e.g., command, possibility, or wish …etc.</p>
-<p><b>يتعلق هذا التصريف بالصيغة التى يأتى فيها القعل «إما الصيغة الإخبارية أو أحد الصيغ الأخرى مثل الأمر ...إلخ «كما سيتم توضيحها الآن ‏٠</b></p>
-
-(1) The Infintive: <b></b>
-This is the source word of the verb from which all the Inflections are derived.
-<b></b>
-
-(2) The Imperative: <b></b> &amp; The Vocative: <b></b>
-
-(3) Indicative (including Interrogative): <b>
-لإخباري الإيضاحى ) ( «ومنها الإستفهام‎ </b>
+	<p><b>قيل معرفة أن أى لغة لا تتم إلا بمعرفة أفعالها‎ ٠وهذه الجملة حقيقية إلى درجة أن إلمامك بالأفعال سيمكنك من‎ تكوين فهم بل جمل بالقبطية‎ ٠</b></p>
+	<p><b>والنصوص كنيستنا الليتورجية فى مملوءة بالأفعال ؛ إرحمنا «تراءف علينا «غفر لنا ...إلخ.‎ </b></p>
+	<p><b>وقبل اليدء فى الكتابة عن هذه الأفعال «إقرأ هذا الفصل التقديمى لتبويبها «وذلك لتسهيل فهم ما ستقرأه فى‎ الفصول القادمة‎ </b></p>
+	<p>The Coptic Verb will be described under three different headings, each with a specific message or meaning.</p>
+	<p><b>الفعل القبطى سيتم شرحه تحت ثلاث تبويبات «كل سيتتاول باب )قصدا (أو غرضا معيتا ‏٠</b></p>
+	<p>(1) THE VERB'S TENSE: <b>‎الفعل ز</b></p>
+	<p>Tense specifies the time when a verb occurs (verbs always indicate action).</p>
+	<p><b>الفعل هذا فيه حدث الذى بالزمن التصريف هذا ي</b></p>
+	<p>Past: <b></b></p>
+	<p>Present: <b></b></p>
+	<p>Future: <b></b></p>
+	<p>(2) THE VERB'S MOOD: <b>jaitl dine </b></p>
+	<p>Mood specifies a particular set of inflectional forms of a verb in order to express whether the action or state it denotes is conceived as fact (Narrative or otherwise) or some other manner; e.g., command, possibility, or wish …etc.</p>
+	<p><b>يتعلق هذا التصريف بالصيغة التى يأتى فيها القعل «إما الصيغة الإخبارية أو أحد الصيغ الأخرى مثل الأمر ...إلخ «كما سيتم توضيحها الآن ‏٠</b></p>
+	<p>(1) The Infintive: <b></b></p>
+	<p>This is the source word of the verb from which all the Inflections are derived.</p>
+	<p><b></b></p>
+	<p>(2) The Imperative: <b></b> &amp; The Vocative: <b></b></p>
+	<p>(3) Indicative (including Interrogative): </p>
+	<p><b>لإخباري الإيضاحى ) ( «ومنها الإستفهام‎ </b></p>
 
 This is the most commonly used form, and it is very close or identical to the narrative form. It also includes the habitual.
 <b>هذه أعم صورة للصيغ وأكثرها إستعمالا .وهى تشمل أيضا الصيغة الدالة على العادة </b>
