--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -3,7 +3,8 @@
 		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
-		<p>Chapter 8</p>
+	<div>
+		<h2>Chapter 8</h2>
 <p>The Verbal Sentence Model:</p>
 <p>Simple Past</p>
 <p>INTRODUCTION TO THE VERBS IN COPTIC</p>
@@ -198,6 +199,80 @@
 <p>(b) Several other exceptions should also be noted</p>
 <p><b>له معانى أخرى «ستأتى الإشارة إليها فى الفصول القادمة‎</b></p>
 <p><i>ϣⲁ</i></p>
-
+<p>Indicates motion to, up to. This denotes either time, persons or places.</p>
+<p><b>تدل على حركة :إلى‎ حتي‎ ٠للزمن ٠والأشخاص والأماكن‎ .</b></p>
+<p><i>ⲁ-ϥ-ⲙⲟϣⲓ ϣⲁ ⲡⲉϥ-ⲏⲓ</i> = he walked up to his house = <b>مشى حتى بيته</b></p>
+<p><i>ⲁ-ⲥ-ⲫⲱⲧ ϣⲁ ϯ-ⲉⲕⲕ̀ⲗⲏⲥⲓⲁ</i> = she ran up to the church = <b>ASI je o></b></p>
+<p><i>ⲉϫⲉⲛ</i></p>
+<p>Indicates motion "onto, on…"</p>
+<p><i>ⲁ-ⲓ-ⲁⲗⲏⲓ ⲉϫⲉⲛ ϯ-ⲉ̀ⲱ̀</i> = I got on the she-donkey = <b>gUY teas,</b></p>
+<p><i>ⲁ-ϥ-ϩⲉⲓ ⲉϫⲉⲛ ⲡⲓ-ⲕⲁϩⲓ</i> = he fell on the floor = <b>.#;¥</b></p>
+<p>Note: <b>i8s—L</b></p>
+<p><i>ⲉϫⲉⲛ</i>: denotes motion onto, while <b>‎بينما «على الحركة عن ت</b></p>
+<p><i>ϩⲓϫⲉⲛ</i>: denotes static location <b>تعير عن مكان ثابت من غير على‎ حركة ) ( ٠.</b></p>
+<p>The two sometimes are interchangable.</p>
+<p><b>وفى يعض الأحيان يحدث تيديل فى المعنى‎ .</b></p>
+<p>The same contrast exists with the less frequently used pair:</p>
+<p><b>كذلك نجد نفس العلاقة بين الحرفين التاليين )والأقل حدوثا‎ ) :</b></p>
+<p><i>ϩⲓⲣⲉⲛ</i>: denotes at the entrance of <b>..٠ال ‎مدخل ع</b></p>
+<p><i>ⲉⲣⲉⲛ</i>: to the entrance of <b>Ji Joas J</b></p>
+<p><i>ϧⲁ</i> kha <b> ‎خا</b></p>
+<p>We have alraedy discussed briefly this preposition. Additional uses and a variety of other meanings will be our current topic. They are:</p>
+<p><b>سبق التعرف على هذا الحرف فى القصول السابقة‎ والإستعمالات والآن ٠سيقم شرح المعانى الأخرى لهذا الحرف:‎ </b></p>
+<p>1- to mean: "under, below" <b> ‎'أسفل'٠ ‎'تحت 'ب</b></p>
+<p>An example for a nominal sentence: <b>‎إسمية لجملة و</b></p>
+<p><i>ⲡⲓ-ⲕⲁϣ ϧⲁ ⲡ̀-ϫⲱⲙ</i> = the pencil under the book = <b>‎الكتاب تحت القلم</b></p>
+<p>2- can be used with verbs of motion denoting carrying or lifting, if the person or the object is under the load he (it) is carrying. (e.g., it has the same meaning as the English word, under).</p>
+<p><b>يمكن إستعمال هذا الحرف مع أفعال الحركة التى تدل على الرقع أو الحمل عندما يكون الحامل ) (تحت )الحمل</b></p>
+<p><i>ⲉⲧⲟⲡⲧ ϧⲁ ⲡ̀-ⲱⲛⲓ</i> = weighted under the stone = <b>ر تحت ث</b></p>
+<p>3- Is used as "for" <b>..؛اب ‎بمعئنى ي</b></p>
+<p>For example, an eye for an eye = <b>‎بعين ع</b></p>
+<p><i>ⲟⲩ-ⲃⲁⲗ ϧⲁ ⲟⲩ-ⲃⲁⲗ</i></p>
+<p>4- also can be used in sentences meaning "about, of."</p>
+<p><b>تستعمل فى أحيان أخرى بمعنى )عن «ب..(‎</b></p>
+<p><i>ⲁ-ⲓ-ⲥⲁϫⲓ ϧⲁ</i> I talked about <b>‎عن ح</b></p>
+<p>5- can be used in verbal and non-verbal sentences meaning as.</p>
+<p><b>يستعمل فى الجمل الفعلية وغير الفعلية يمعنى )ك ‏٠٠.بصفة( .</b></p>
+<p><i>ⲁ-ϥ-ⲓ̀ ϧⲁ ⲃⲱⲕ</i> he came as a slave <b>‎كعيد أ</b></p>
+<p>Other prepositions with verbs of motion</p>
+<p><b>حروف جر أخرى تستعمل مع أفعال الحركة‎</b></p>
+<p>We have already discussed these: <b>‎الحروف لهذه التعرض س</b></p>
+<p><i>ϩⲓ</i> on or along a surface <b>‎سطع على «ع</b></p>
+<p><i>ϩⲓϫⲉⲛ</i> on, or along a surface <b>‎سطح على «ع</b></p>
+<p><i>ⲛ̀ⲥⲁ</i> behind, after often has the English sense of after, to go after; i.e., to go to fetch or to try to overtake <b>‎خلف ‎و : ‎يعنى غالبا الحرف ه » ‎لإحضاره شئ وراء ي ‎يطارد «شئئع أو شخص ي</b></p>
+<p><i>ⲛⲉⲙ</i> along with <b>٠.١ ‎ل مصاحب «مع</b></p>
+<p><i>ϧⲉⲛ</i> within a defined area <b>) ‎محدد مكان) ف</b></p>
+<p><i>ⲛⲁϩⲣⲉⲛ</i> into the presence of <b>‎؛أمام حضرة فى</b></p>
+<p><i>ϩⲁϩⲧⲉⲛ</i> up to, near <b>بقرب٠ ‎جائب إ</b></p>
+<p>Important Note: <b>ملحوظة هامة</b></p>
+<p>The reader should give paricular attention to the use of prepositions with verbs since these combinations are sometimes quite unpredictable.</p>
+<p><b>يجب على القارئ مراعاة إختيار حروف الجر التى تصحب الأفعال «وذلك لآن يعض الأفعال يصعب التنبؤ فيها أي من حروف الجر سيتم إستعمالها </b></p>
+<p>Vocabulary</p>
+<p><b>مفردات‎</b></p>
+<p><i>ⲃⲱⲕ</i> voak <b>hgh</b></p>
+<p>verb intransitive <b>‎لازم ف</b></p>
+<p>to go <b>‎ذ</b></p>
+<p><i>ϣⲉ</i> che <b></b></p>
+<p>verb reflexive: which means it will have the attached personal pronoun in different verbal conjugations joined to its end (besides the usual conjugation prefixed attached to it).</p>
+<p><b>المعتاد الذى يتصل بأولها .من الأقعال القليلة التى تتطلب الضمير الشخصى المتصل موصولا بآخرها علاوة على التصريف </b></p>
+<p>to go <b>ذهب) يذهب</b></p>
+<p>conjugation for the first perfect: <b>التام فى ‎الماضى ا</b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+<p><i></i><b></b></p>
+</div>
 	</body>
 </html>
