--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -4,6 +4,30 @@
 	</head>
 	<body>
 	<div>
+  <h2>Chapter 7</h2>
+  <h3>The Structure of Nominal Sentences</h3>
+  <p>SENTENCES WITH NOMINAL PREDICATES</p>
+  <p><b>الجمل الإسمية مع وجود الإسم‎</b></p>
+  <p>Introduction: <b>‎م</b></p>
+  <p>In the previous chapters, we have been introduced to the Nominal Sentences.</p>
+  <p><b>. الإسمية الجمل على التعرف فى بدأنا السابقة الفصول فى</b></p>
+  <p>The simplest form of nominal sentences, will have no verbal element. The so called non-verbal sentence.</p>
+  <p><b>وأبسط أنواع الجملة الإسمية هى التى لا تحتوى على فعل‎ .</b></p>
+  <p>The Structure of the Simple Nominal Sentence will have:</p>
+  <p>وتكوين أبسط الجمل الإسمية يكون كالتالى</p>
+  <p>THE SUBJECT (<b>lai</b>) + THE PREDICATE (<b>الخبر</b>)</p>
+  <p>We have seen the sentence where the subject (<b>sisel</b>), will be a noun conditioned by a definite article</p>
+  <p>+</p>
+  <p>the predicate (<b>45</b>), will be an adverbial phrase.</p>
+  <p>And this constituted a full sentence. And this sentence was labeled "the Nominal Sentenece with an Adverbial Predicate."</p>
+  <p><b>مضافا إليه :أداة التعريف «كشرط ,وقد تم التعرف على الجملة الإسمية البسيطة حيث المبتدأ يكون إسما</b></p>
+  <p>+</p>
+  <p><b>الخبر :ويكون مضافا ومضافا إليه أو ظرف.</b></p>
+  <p><b>تسميتها الجملة الإسمية ذات الخبر الظرفي .وهنا يكفى لتكوين النوع الأول للجملة الإسمية ‏٠ويمكن للتسهيل</b></p>
+  <p>Example: <b>‎م</b></p>
+  <p><i>ⲫ̀-ⲣⲱⲙⲓ ϧⲉⲛ ⲡ̀-ⲏⲓ</i></p>
+</div>
+	<div>
 		<h2>Chapter 8</h2>
 <p>The Verbal Sentence Model:</p>
 <p>Simple Past</p>
