--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -3,6 +3,199 @@
 		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
+	<div id="chapter_02">
+  <h2>Chapter 2</h2>
+  <h2>The Coptic Nouns</h2>
+  <p>The Coptic Nouns: <b><img src="https://i.imgur.com/zb9Sj1R.png" alt=""></b></p>
+  <p>1. The Gender: <b><img src="https://i.imgur.com/DUvdimN.png" alt=""></b></p>
+  <p>You know the nouns as: <b><img src="https://i.imgur.com/hfz1QHz.png" alt=""></b></p>
+  <p>a) Masculine: <b><img src="https://i.imgur.com/Fdlf1Cy.png" alt=""></b></p>
+  <p>b) Feminine: <b><img src="https://i.imgur.com/66g9rL6.png" alt=""></b></p>
+  <p>c) Neutral: <b><img src="https://i.imgur.com/b03kdQl.png" alt=""></b></p>
+  <p>In Coptic: <b><img src="https://i.imgur.com/lAn4oKR.png" alt=""></b></p>
+  <p>There are only 2 genders: <b><img src="https://i.imgur.com/GOnwtH5.png" alt=""></b></p>
+  <p>1- Masculine: <b><img src="https://i.imgur.com/l1qk1rf.png" alt=""></b></p>
+  <p>2- Feminine: <b><img src="https://i.imgur.com/D60QZck.png" alt=""></b></p>
+  <p>The easy part is: Nouns denoting male beings are masculine; those denoting females are feminine.</p>
+  <p>With the other nouns, you really cannot tell the difference between the masculine and the feminine. This must be learned for each noun.</p>
+  <p><b><img src="https://i.imgur.com/mmYdmbL.png" alt=""></b></p>
+  <p>Now, let us have some examples of Coptic names. Try to memorize these as they are very common ones: <b><img src="https://i.imgur.com/aAnb17n.png" alt=""></b></p>
+  <p>Masculine: <b><img src="https://i.imgur.com/96vUKDA.png" alt=""></b></p>
+  <table>
+    <tr><td><i>ⲓⲱⲧ</i> (pronounced y-oat) (father): <b><img src="https://i.imgur.com/k37e09f.png" alt=""></b></td></tr>
+    <tr><td><i>ⲕⲁϩⲓ</i> (ka-hi) (earth, ground): <b><img src="https://i.imgur.com/SXF4C61.png" alt=""></b></td></tr>
+    <tr><td><i>ϩⲟⲟⲩ</i> (ho-OO) (day): <b><img src="https://i.imgur.com/E5bdRmP.png" alt=""></b></td></tr>
+  </table>
+  <p>Feminine: <b><img src="https://i.imgur.com/9PZG54o.png" alt=""></b></p>
+  <table>
+    <tr><td><i>ⲙⲁⲩ</i> (ma-v) (mother): <b><img src="https://i.imgur.com/baFT0kz.png" alt=""></b></td></tr>
+    <tr><td><i>ⲫⲉ</i> (phe) (sky, heaven): <b><img src="https://i.imgur.com/6WoZXjg.png" alt=""></b></td></tr>
+  </table>
+  <p>There are some pairs of nouns where a formal relationship exists between the masculine and feminine forms:</p>
+  <p><b><img src="https://i.imgur.com/vgr5pEr.png" alt=""></b></p>
+  <p>1-</p>
+  <p>masculine: <b><img src="https://i.imgur.com/1YEpujR.png" alt=""></b></p>
+  <p><i>ⲥⲟⲛ</i>: [So-n - <b><img src="https://i.imgur.com/L1kJGxk.png" alt=""></b>] [brother - <b><img src="https://i.imgur.com/DaVwd08.png" alt=""></b>]</p>
+  <p>feminine: <b><img src="https://i.imgur.com/BwAYHLC.png" alt=""></b></p>
+  <p><i>ⲥⲱⲛⲓ</i> [saw-nee - <b><img src="https://i.imgur.com/wP3ySdq.png" alt=""></b>] [sister - <b><img src="https://i.imgur.com/SUV9qSt.png" alt=""></b>]</p>
+  <p>2-</p>
+  <p>masculine: <b><img src="https://i.imgur.com/1YEpujR.png" alt=""></b></p>
+  <p><i>ϣⲏⲣⲓ</i> [sheer-ee - <b><img src="https://i.imgur.com/E5fxFdH.png" alt=""></b>] [boy, son - <b><img src="https://i.imgur.com/Eik28uK.png" alt=""></b>]</p>
+  <p>feminine: <b><img src="https://i.imgur.com/BwAYHLC.png" alt=""></b></p>
+  <p><i>ϣⲉⲣⲓ</i> [sher-ee - <b><img src="https://i.imgur.com/vckoi3R.png" alt=""></b>] [girl, daughter - <b><img src="https://i.imgur.com/URWpN2U.png" alt=""></b>]</p>
+  <p>3-</p>
+  <p>masculine: <b><img src="https://i.imgur.com/1YEpujR.png" alt=""></b></p>
+  <p><i>ϧⲉⲗⲗⲟ</i> [khello - <b><img src="https://i.imgur.com/E8MiQkM.png" alt=""></b>] [old man - <b><img src="https://i.imgur.com/XPNT1OP.png" alt=""></b>]</p>
+  <p>feminine: <b><img src="https://i.imgur.com/BwAYHLC.png" alt=""></b></p>
+  <p><i>ϧⲉⲗⲗⲱ</i> [khel-law - <b><img src="https://i.imgur.com/exgtrs1.png" alt=""></b>] [old woman - <b><img src="https://i.imgur.com/I4ygRvZ.png" alt=""></b>]</p>
+  <p>There are other gender rules to know in Coptic names, but those will be noted in future lessons. For now, only study the above.</p>
+  <p><b><img src="https://i.imgur.com/c3mjfpk.png" alt=""></b></p>
+  <p>Rule: <b><img src="https://i.imgur.com/mJ1mHDR.png" alt=""></b></p>
+  <p>Most of the Coptic nouns will keep the same form of the singular when the the plural is used; i.e., there is only one form for both the singular and the plural. However, there are relatively a small number of nouns that have distinct plural forms. For example:</p>
+  <p><b><img src="https://i.imgur.com/nwtAbZf.png" alt=""></b></p>
+  <table>
+    <tr>
+      <th>
+        <p>Name</p>
+        <p><b><img src="https://i.imgur.com/0l5l2eY.png" alt=""></b></p>
+      </th>
+      <th>
+        <p>Singular</p>
+        <p><b><img src="https://i.imgur.com/PMP1ijO.png" alt=""></b></p>
+      </th>
+      <th>
+        <p>Plural</p>
+        <p><b><img src="https://i.imgur.com/v4xL7IT.png" alt=""></b></p>
+      </th>
+    </tr>
+    <tr>
+      <td>
+        <p><i>ⲓⲱⲧ</i></p>
+        <p>Father</p>
+        <p><b><img src="https://i.imgur.com/2uvY8EN.png" alt=""></b></p>
+      </td>
+      <td>
+        <p><i>ⲓⲱⲧ</i></p>
+        <p>Father</p>
+        <p><b><img src="https://i.imgur.com/2uvY8EN.png" alt=""></b></p>
+      </td>
+      <td>
+        <p><i>ⲓⲟϯ</i></p>
+        <p></p>
+        <p><b><img src="https://i.imgur.com/QiO5Dow.png" alt=""></b></p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p><i>ⲥⲟⲛ</i></p>
+        <p>brother</p>
+        <p><b><img src="https://i.imgur.com/ykItw13.png" alt=""></b></p>
+      </td>
+      <td>
+        <p><i>ⲥⲟⲛ</i></p>
+        <p>brother</p>
+        <p><b><img src="https://i.imgur.com/ykItw13.png" alt=""></b></p>
+      </td>
+      <td>
+        <p><i>ⲥ̀ⲛⲏⲟⲩ</i></p>
+        <p></p>
+        <p><b><img src="https://i.imgur.com/qxKZQF6.png" alt=""></b></p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p><i>ϫⲟⲓ</i></p>
+        <p>Ship</p>
+        <p><b><img src="https://i.imgur.com/lGtVU3Z.png" alt=""></b></p>
+      </td>
+      <td>
+        <p><i>ϫⲟⲓ</i></p>
+        <p>Ship</p>
+        <p><b><img src="https://i.imgur.com/lGtVU3Z.png" alt=""></b></p>
+      </td>
+      <td>
+        <p><i>ⲉ̀ϫⲏⲟⲩ</i></p>
+        <p></p>
+        <p><b><img src="https://i.imgur.com/ScRhXEu.png" alt=""></b></p>
+      </td>
+    </tr>
+  </table>
+  <p>Study the nouns above and try to pronounce them audibly.</p>
+  <p><b><img src="https://i.imgur.com/225F8bY.png" alt=""></b></p>
+  <p>Now, how do you know the difference between a plural and a singular if the noun has only one form for both the singular and plural?</p>
+  <p>The answer is through the article that is associated with the noun. It will tell you the difference. (See below)</p>
+  <p><b><img src="https://i.imgur.com/yKHXrXy.png" alt=""></b></p>
+  <p>You will learn about these plural forms when they are given in the vocabularies of each lesson along with the singular form. Unfortunately, there is no consistent pattern for their construction.</p>
+  <p><b><img src="https://i.imgur.com/jybc4nN.png" alt=""></b></p>
+  <p><img src="https://i.imgur.com/XFcxDSY.png" alt=""></p>
+  <p>The Definite Article</p>
+  <p><b><img src="https://i.imgur.com/k4RtxbZ.png" alt=""></b></p>
+  <p>As you know, the definite article in the English language is the very simple "the". You can say man or the man.</p>
+  <p>The same article can also be used for the feminine noun. So you can say the woman.</p>
+  <p>Not only that, but the same definite article can be used for the singular form and the plural form, so you can say: the man or the men.</p>
+  <p>And the same can be used for the plural of the feminine nouns.</p>
+  <p>Now, if you can read Arabic, the following paragraph will discuss the use of the definite article in Arabic grammar.</p>
+  <p><b><img src="https://i.imgur.com/lcfEklr.png" alt=""></b></p>
+  <p>Rule: <b><img src="https://i.imgur.com/cdHDvXa.png" alt=""></b></p>
+  <p>The Coptic language respects:</p>
+  <p>1- The gender, so there is a certain form for the single masculine and another form for the single feminine.</p>
+  <p>2- The plural form is applied for both the masculine and the feminine.</p>
+  <p><b><img src="https://i.imgur.com/DJr24LJ.png" alt=""></b></p>
+  <p>The Definite Articles</p>
+  <p>for the Single Person</p>
+  <p><b><img src="https://i.imgur.com/SgZHkSV.png" alt=""></b></p>
+  <p>Coptic Rule</p>
+  <p>1- The Definite article is prefixed to the noun, which means that it comes before the noun. It is also attached to it.</p>
+  <p>2- The definite article in Coptic is actually a derivative of the far demonstrative, [<i>ⲫⲏ</i>, <i>ⲑⲏ</i>, <i>ⲛⲏ</i>], and we shall deal with those later.</p>
+  <p>3- Notice that:</p>
+  <p>a) the single masculine is represented by the letter sound</p>
+  <p>1- "P", which in Coptic is <i>ⲡ</i>, and</p>
+  <p>2- The letter: <i>ⲫ</i> [pronouned "ph" as in "Philip"]</p>
+  <p>b) the single feminine is represented by the letter T (really meaning the sound "T")</p>
+  <p>1- <i>ϯ</i> and</p>
+  <p>2- The letter <i>ⲑ</i></p>
+  <p>c) The plural for both the masculine and feminine is represented by the sound "N"</p>
+  <p><b><img src="https://i.imgur.com/rwssK1J.png" alt=""></b></p>
+  <p><i>ⲫⲏ</i>, <i>ⲑⲏ</i>, <i>ⲛⲏ</i></p>
+  <p><b><img src="https://i.imgur.com/kZQkCZd.png" alt=""></b></p>
+  <p><i>ⲡ ⲫ</i></p>
+  <p><b><img src="https://i.imgur.com/KW4nfKN.png" alt=""></b></p>
+  <p><i>ϯ ⲑ</i></p>
+  <p><b><img src="https://i.imgur.com/U0eZuyc.png" alt=""></b></p>
+  <p><img src="https://i.imgur.com/RDMkeUT.png" alt=""></p>
+  <p>The Definite Articles</p>
+  <p><b><img src="https://i.imgur.com/HRsH3dU.png" alt=""></b></p>
+  <p>1. The Single Masculine:</p>
+  <p><b><img src="https://i.imgur.com/g3WVIIt.png" alt=""></b></p>
+  <p><i>ⲡⲓ</i></p>
+  <p><i>ⲡ̀</i></p>
+  <p><i>ⲫ̀</i></p>
+  <p>2. The Single Feminine:</p>
+  <p><b><img src="https://i.imgur.com/NPTWBs9.png" alt=""></b></p>
+  <p><i>ϯ</i></p>
+  <p><i>ⲧ̀</i></p>
+  <p><i>ⲑ̀</i></p>
+  <p>3. The Plural (Both Masculine &amp; Feminine):</p>
+  <p><b><img src="https://i.imgur.com/wjQOTES.png" alt=""></b></p>
+  <p><i>ⲛⲓ</i></p>
+  <p>Now study them carefully. Remember that P represents the single masculine; the T the single feminine; and the N the plural. Once you have studied that, you can start writing some of the names that we have already mentioned with their definite articles. A question in your mind will always come up: Are there any rules that will make you use one or the other under different circumstances? And if yes, what are they?</p>
+  <p>The answer to this question is yes. BUT now you only have to study one rule (which actually is the most important). As for the other rules, do not bother with their studying them now. You will need them as you continue to know more about how the Coptic is written.</p>
+  <p><b><img src="https://i.imgur.com/ht3c9WR.png" alt=""></b></p>
+  <p>Rules for Single Nouns</p>
+  <p><b><img src="https://i.imgur.com/3bAh9mQ.png" alt=""></b></p>
+  <p>1- Use the <i>ⲡⲓ</i> and the <i>ϯ</i> as a general denominator for the definite articles. They both can be used for any noun with very few exeptions.</p>
+  <p>Some authorities consider their use to emphasize the single identity of the noun in question. As an example, the Coptic word for "God" is "<i>ⲛⲟⲩϯ</i> = Noo-tee". If you say "<i>ⲡⲓ-ⲛⲟⲩϯ</i>", that will mean the only God that you and I know. In this example, there is an emphasis on identity.</p>
+  <p>2- As a general rule, and there are many exceptions, you use the light forms of the definite articles, i.e. [<i>ⲫ̀</i>, <i>ⲑ̀</i>], if the noun that you want to tag starts with any of the following letters:</p>
+  <p><i>ⲃ</i>, <i>ⲓ</i>, <i>ⲣ</i>, <i>ⲛ</i>, <i>ⲗ</i>, <i>ⲙ</i></p>
+  <p>For example, if you want to use the above mentioned noun "<i>ⲛⲟⲩϯ</i>" = God, this noun starts with the letter N which is one of the Blimnor group. So you can say "<i>ⲫ̀-ⲛⲟⲩϯ</i>". This in point of fact is one of the commonest nouns we use in our church.</p>
+  <p><b><img src="https://i.imgur.com/MG8fMt6.png" alt=""></b></p>
+  <p><i>ⲡⲓ</i>, <i>ϯ</i></p>
+  <p><b><img src="https://i.imgur.com/LNwyEVW.png" alt=""></b> <i>ⲛⲟⲩϯ</i> <b><img src="https://i.imgur.com/9IyH2Gb.png" alt=""></b></p>
+  <p><b><img src="https://i.imgur.com/xHV8EvT.png" alt=""></b> <i>ⲫ̀-ⲛⲟⲩϯ</i> <b><img src="https://i.imgur.com/MYLQF7n.png" alt=""></b></p>
+  <p><b><img src="https://i.imgur.com/HCSZk2F.png" alt=""></b> <i>ⲡⲓ-ⲛⲟⲩϯ</i> <b><img src="https://i.imgur.com/KLV1gKM.png" alt=""></b> <b><img src="https://i.imgur.com/ZDp0RjO.png" alt=""></b></p>
+  <p><b><img src="https://i.imgur.com/ykRVSpr.png" alt=""></b></p>
+  <p><i>ⲃ</i>, <i>ⲓ</i>, <i>ⲣ</i>, <i>ⲛ</i>, <i>ⲗ</i>, <i>ⲙ</i></p>
+</div>
 	<div>
   <h2>Chapter 7</h2>
   <h3>The Structure of Nominal Sentences</h3>
