--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -196,7 +196,7 @@
   <p><b><img src="https://i.imgur.com/ykRVSpr.png" alt=""></b></p>
   <p><i>ⲃ</i>, <i>ⲓ</i>, <i>ⲣ</i>, <i>ⲛ</i>, <i>ⲗ</i>, <i>ⲙ</i></p>
 </div>
-	<div>
+	<!--<div>
   <h2>Chapter 7</h2>
   <h3>The Structure of Nominal Sentences</h3>
   <p>SENTENCES WITH NOMINAL PREDICATES</p>
@@ -490,6 +490,6 @@
 <p><i></i><b></b></p>
 <p><i></i><b></b></p>
 <p><i></i><b></b></p>
-</div>
+</div>-->
 	</body>
 </html>
