--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -81,7 +81,7 @@
       </td>
       <td>
         <p><i>ⲓⲟϯ</i></p>
-        <p></p>
+        <p>Fathers</p>
         <p><b><img src="https://i.imgur.com/QiO5Dow.png" alt=""></b></p>
       </td>
     </tr>
@@ -98,7 +98,7 @@
       </td>
       <td>
         <p><i>ⲥ̀ⲛⲏⲟⲩ</i></p>
-        <p></p>
+        <p>brothers</p>
         <p><b><img src="https://i.imgur.com/qxKZQF6.png" alt=""></b></p>
       </td>
     </tr>
@@ -115,7 +115,7 @@
       </td>
       <td>
         <p><i>ⲉ̀ϫⲏⲟⲩ</i></p>
-        <p></p>
+        <p>Ships</p>
         <p><b><img src="https://i.imgur.com/ScRhXEu.png" alt=""></b></p>
       </td>
     </tr>
