--- a/coptic/mattar/index.html
+++ b/coptic/mattar/index.html
@@ -198,6 +198,110 @@
     <p><b><img src="https://i.imgur.com/ykRVSpr.png" alt=""></b></p>
     <p><i>ⲃ</i>, <i>ⲓ</i>, <i>ⲣ</i>, <i>ⲛ</i>, <i>ⲗ</i>, <i>ⲙ</i></p>
   </div>
+  <div id="chapter_03">
+    <h2>Chapter 3</h2>
+    <h2>Common Nouns in Our Church</h2>
+    <p>The Most Common Nouns We Use in Our Church</p>
+    <p><b><img src="https://i.imgur.com/Pi4hiLd.png" alt=""></b></p>
+    <p>This chapter deals with an exciting subject that will be very useful to the reader because if you can make yourself familiar with the most common church nouns, it will make you more "intuned" to the Liturgy when it is recited.</p>
+    <p><b><img src="https://i.imgur.com/RrNgF0Q.png" alt=""></b></p>
+    <p>Note #1: Here, for every noun, a definite article is going to be attached to facilitate the recognition of the gender of this noun. A hyphen will separate the definite article and the noun. This is not the usual way of writing, but done for your convenience.</p>
+    <p><b><img src="https://i.imgur.com/UoSPgFy.png" alt=""></b></p>
+    <p>Note #2: The words of Greek origin will be mentioned with their Greek definite articles. Study them in this form. No attempt at grammatical rules will be cited. You need only to know that Greek nouns change at their end depending on their grammatical labelling; e.g., prepositional or otherwise.</p>
+    <p><b><img src="https://i.imgur.com/aZ5KJa0.png" alt=""></b></p>
+    <p>Note #3: There were names whose sources were difficult to find in the English, or the Coptic counter-words were missing, and they are going to be cited as such. The help of those who can fill in the blanks is definitely needed. Any corrections, as long as they are authentic, would definitely be appreciated.</p>
+    <p><b><img src="https://i.imgur.com/88CoZBp.png" alt=""></b></p>
+    <p>+++++++ Our God +++++++</p>
+    <p><b><img src="https://i.imgur.com/ZXfX9qg.png" alt=""></b></p>
+    <p>The Trinity</p>
+    <p><b><img src="https://i.imgur.com/OpYNnpA.png" alt=""></b></p>
+    <p><i>ϯ-Ⲧⲣⲓⲁⲥ</i> [et-ree-yas - <b><img src="https://i.imgur.com/oO5uEK5.png" alt=""></b>]</p>
+    <p>The Father: <b><img src="https://i.imgur.com/d41joGW.png" alt=""></b></p>
+    <p><i>ⲫ̀-Ⲓⲱⲧ</i> [Coptic - ephyoat <b><img src="https://i.imgur.com/x5sC2C8.png" alt=""></b>]</p>
+    <p><i>ⲟ-Ⲡⲁⲧⲣⲓ</i> [Greek - pat-ree <b><img src="https://i.imgur.com/hJArX4d.png" alt=""></b>]</p>
+    <p><i>ⲟ-Ⲡⲁⲧⲏⲣ</i> [Greek - pat-eer <b><img src="https://i.imgur.com/fEif0ft.png" alt=""></b>]</p>
+    <p><i>ⲟ-Ⲡⲁⲧⲣⲟⲥ</i> [Greek - pa-tross <b><img src="https://i.imgur.com/i3uv35D.png" alt=""></b>]</p>
+    <p>The Son: <b><img src="https://i.imgur.com/p5xuq4x.png" alt=""></b></p>
+    <p><i>ⲡ-Ϣⲏⲣⲓ</i> [sheer-ee - <b><img src="https://i.imgur.com/5qmmeES.png" alt=""></b>]</p>
+    <p><i>ⲟ-Ⲩⲓⲟⲥ</i> [ee-yos - <b><img src="https://i.imgur.com/DwUroxu.png" alt=""></b>]</p>
+    <p><i>ⲟ-Ⲩⲓⲟⲩ</i> [ee-yoo - <b><img src="https://i.imgur.com/Psle1tw.png" alt=""></b>]</p>
+    <p><i>ⲟ-Ⲩⲓⲱ</i> [ee-yaw - <b><img src="https://i.imgur.com/rH6pg0f.png" alt=""></b>]</p>
+    <p>The Holy Spirit: <b><img src="https://i.imgur.com/x3q2uZI.png" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>God: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Lord: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Master: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Almighty: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>Emmanuel: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Jesus: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Christ: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Messiah: <b><img src="" alt=""></b></p>
+    <p>[]</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>[]</p>
+    <p>The Word: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Cross: +++ <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><img src="" alt=""></p>
+    <p>The Virgin Mary: <b><img src="" alt=""></b></p>
+    <p>The Virgin: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Mother (Birthgiver) of God: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>The Angelic Order: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>Total meaning = The Heavenly Orders</p>
+    <p>The Seven Archangels: <b><img src="" alt=""></b></p>
+    <p>The Archangels: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>1- Michael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>2- Gabriel: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p><img src="" alt=""></p>
+    <p>3- Raphael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>4- Surael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>5- Sadakael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>6- Saratael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>7- Ananael: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
+    <p>The Highest Ranks of the Angelic Order</p>
+    <p>[The First Hierarchy]</p>
+    <p><b><img src="" alt=""></b></p>
+    <p><b><img src="" alt=""></b></p>
+    <p>1- The Cherubs: <b><img src="" alt=""></b></p>
+    <p><i></i> [<b><img src="" alt=""></b>]</p>
 </div>
 <div id="after">
   <h2 class="half">After:</h2>
